# cpp_opencv

./: CMakeLists.txt  README.md  ex1.cpp  ex2.cpp
