cmake_minimum_required(VERSION 3.1)
project(test)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(DCERES_FOUND 1)
set(DWITH_VTK On)
find_package(OpenCV REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
#include_directories( /usr/local/Cellar/opencv@3/3.4.5_6/include )
include_directories( /Users/murufon/Documents/opencv/build/include )
add_executable(main main.cpp)
target_link_libraries(main ${OpenCV_LIBS})
